feat(main): yarn

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "LeoBlog",
   "version": "1.0.0",
   "author": "reco_luan",
+  "engines": {
+    "node": "16.13.0"
+  },
   "scripts": {
     "dev": "vuepress dev . --open --host \"localhost\"",
     "build": "vuepress build ."
